sandc/test/fixtures/pbtRegression/shouldSucceed/qualifiedPackageItems/Bar.sand
package bar;

use foo.Foo;

pub class Bar extends Foo {
    
}