sandc/test/fixtures/pbtRegression/shouldFail/privPackageItem/Dependent.sand
pub class Dependent extends Priv {
    
}